--- a/styles/core/layout.less
+++ b/styles/core/layout.less
@@ -14,15 +14,28 @@
     top: 80px;
     bottom: 90px;
     width: 100%;
+    padding: 20px 50px;
     .sidebar-cont {
       float: left;
       width: 190px;
       height: 100%;
-      background-color: #333;
+      background: #fff;
+      border-radius: 6px;
+      padding: 10px;
+      ul li{
+        list-style-type: none;
+        line-height: 30px;
+        a {
+          text-decoration: none;
+        }
+      }
     }
     .content-cont {
       height: 100%;
-      margin-left: 200px;
+      margin-left: 210px;
+      background: #fff;
+      border-radius: 6px;
+      padding: 10px;
     }
   }
   .footer-cont {
@@ -35,7 +48,7 @@
     line-height: 90px;
     text-align: center;
     border-top: 1px solid #e1e1e1;
-    background-color: #fff;
+    background: #fff;
   }
 }
 
