--- a/styles/themes/default.less
+++ b/styles/themes/default.less
@@ -1,6 +1,6 @@
 
 // ------ Base & Require ------
-@body-background        : #f6f6f6;
+@body-background        : #ececec;
 
 @font-family            : "Microsoft YaHei","微软雅黑","Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB",Arial,sans-serif;
 @code-family            : Consolas,Menlo,Courier,monospace;
