--- a/styles/core/layout.less
+++ b/styles/core/layout.less
@@ -21,13 +21,9 @@
       height: 100%;
       background: #fff;
       border-radius: 6px;
-      padding: 10px;
-      ul li{
-        list-style-type: none;
+      padding: 10px 30px;
+      ul li {
         line-height: 30px;
-        a {
-          text-decoration: none;
-        }
       }
     }
     .content-cont {
